# rex

./: .gitignore  AGENTS.md  COLONS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MATCH.md  README.md  build.sh  llms.txt  package-lock.json
docs/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  EMBEDDING.md  LANGUAGE.md  README.md  SPEC.md  book.toml  conf.py  disable_help_shortcut.js  index.md  make.bat  requirements.txt
ouroboros-rex/: Cargo.toml
rex/: Cargo.toml  README.md
rex-ast/: Cargo.toml  README.md
rex-ast/src/: expr.rs  lib.rs  macros.rs
rex-cli/: Cargo.toml  README.md
rex-cli/examples/: adt.rex  cli_subprocess_log.rex  integer_literal_overloading.rex  typeclasses_result_functor.rex
rex-cli/examples/libraries_advanced/app/: pipeline.rex
rex-cli/examples/modules_advanced/: README.md
rex-cli/examples/modules_advanced/app/: metrics.rex
rex-cli/examples/modules_include/includes/lib/: math.rex
rex-cli/src/: cli_prelude.rs  lib.rs
rex-cli/tests/: demos.rs  derive.rs  embedding.rs  fuzz_smoke.rs  inject_adt.rs  json_conversion.rs  let_rec.rs  negative.rs  record_update.rs  rust_types.rs  spec_semantics.rs  typeclasses_system.rs
rex-core/: Cargo.toml
rex-engine/: Cargo.toml  README.md
rex-engine/src/: cancel.rs  compiler.rs  engine.rs  env.rs  error.rs  eval.rs  evaluator.rs  lib.rs  modules.rs  prelude.rs  runtime_env.rs  stack.rs  test_helpers.rs  value.rs
rex-engine/src/libraries/: filesystem.rs  library.rs  mod.rs  resolvers.rs  types.rs
rex-engine/src/modules/: filesystem.rs  mod.rs  module.rs  resolvers.rs  system.rs  types.rs
rex-engine/tests/: cactus_evaluator.rs  engine.rs  eval.rs  evaluator_characterization.rs  libraries.rs  modules.rs  stack.rs  value.rs
rex-fuzz/: Cargo.toml  README.md
rex-fuzz/src/: lib.rs
rex-gas/: Cargo.toml  README.md
rex-lexer/: Cargo.toml  README.md
rex-lsp/: Cargo.toml  README.md  package-lock.json
rex-lsp/src/: lib.rs  main.rs  server.rs  tower.rs
rex-lsp/tests/: lib.rs
rex-mdbook/: Cargo.toml
rex-parser/: Cargo.toml  README.md
rex-parser/src/: lib.rs  op.rs  stack.rs
rex-parser/src/parser/: mod.rs
rex-parser/tests/: parser.rs
rex-proc-macro/: Cargo.toml  README.md
rex-ts/: Cargo.toml  README.md
rex-ts/src/: lib.rs  prelude.rs  prelude_typeclasses.rex  stack.rs  typesystem.rs
rex-typesystem/: Cargo.toml  README.md
rex-typesystem/src/: error.rs  inference.rs  lib.rs  prelude.rs  types.rs  typesystem.rs  unification.rs
rex-typesystem/tests/: inference.rs
rex-wasm/: Cargo.toml
rex-wasm/src/: lib.rs
rex/examples/: adt.rex  cli_io_cat.rex  cli_io_count_stdin.rex  cli_subprocess_capture.rex  cli_subprocess_log.rex  complex.rex  default.rex  demo.rex  lots_of_lambdas.rex  lots_of_lets.rex  mega.rex  print.rex  record_update.rex  type_classes.rex  typeclasses_custom_pretty.rex  typeclasses_custom_show.rex  typeclasses_default_list_option.rex  typeclasses_hkt_functor_applicative.rex  typeclasses_methods_and_globals.rex  typeclasses_pattern_match_in_method.rex  typeclasses_result_functor.rex  typeclasses_superclass_usage.rex
rex/examples/modules_advanced/: README.md  main.rex
rex/examples/modules_advanced/core/: labels.rex
rex/examples/modules_basic/: main.rex  main_no_alias.rex
rex/examples/modules_basic/foo/: bar.rex
rex/src/: cli_prelude.rs  json.rs  lib.rs  main.rs
rex/tests/: add.rs  demos.rs  derive.rs  embedding.rs  examples.rs  fuzz_smoke.rs  inject_adt.rs  integer_literal_overloading.rs  json_conversion.rs  json_roundtrip.rs  let_rec.rs  negative.rs  record_update.rs  recursion.rs  rust_types.rs  spec_semantics.rs  state.rs  typeclasses_system.rs
rexlang/: Cargo.toml  README.md
rexlang-ast/: Cargo.toml  README.md
rexlang-ast/src/: expr.rs  lib.rs  macros.rs
rexlang-cli/: Cargo.toml  README.md
rexlang-cli/examples/: cli_subprocess_log.rex  default.rex  mega.rex
rexlang-cli/examples/libraries_advanced/: README.md
rexlang-cli/examples/libraries_advanced/core/: base.rex
rexlang-cli/examples/modules_advanced/core/: calc.rex
rexlang-cli/examples/modules_include/: main.rex
rexlang-cli/src/: cli_prelude.rs  lib.rs  main.rs
rexlang-cli/tests/: demos.rs  derive.rs  embedding.rs  examples.rs  fuzz_smoke.rs  inject_adt.rs  integer_literal_overloading.rs  json_conversion.rs  let_rec.rs  negative.rs  record_update.rs  recursion.rs  rust_types.rs  spec_semantics.rs  typeclasses_system.rs
rexlang-core/: Cargo.toml  README.md
rexlang-core/examples/: cli_io_cat.rex  cli_io_count_stdin.rex  cli_subprocess_capture.rex  cli_subprocess_log.rex  typeclasses_custom_size.rex  typeclasses_hkt_functor_applicative.rex
rexlang-core/examples/modules_advanced/: README.md
rexlang-core/src/: json.rs  lib.rs
rexlang-core/tests/: demos.rs  derive.rs  embedding.rs  examples.rs  inject_adt.rs  integer_literal_overloading.rs  json_conversion.rs  json_roundtrip.rs  let_rec.rs  negative.rs  record_update.rs  recursion.rs  rust_types.rs  spec_semantics.rs  typeclasses_system.rs
rexlang-engine/: Cargo.toml  README.md
rexlang-engine/src/: compiler.rs  engine.rs  env.rs  error.rs  evaluator.rs  lib.rs  prelude.rs  value.rs
rexlang-engine/src/libraries/: filesystem.rs  library.rs  mod.rs  resolvers.rs  system.rs  types.rs
rexlang-engine/src/modules/: filesystem.rs  mod.rs  resolvers.rs  system.rs  types.rs
rexlang-engine/tests/: engine.rs  eval.rs  libraries.rs  modules.rs
rexlang-fuzz/: Cargo.toml  README.md
rexlang-fuzz/src/: lib.rs
rexlang-lexer/: Cargo.toml  README.md
rexlang-lexer/src/: lib.rs  span.rs
rexlang-lsp/: Cargo.toml  README.md
rexlang-lsp/src/: lib.rs  main.rs
rexlang-parser/: Cargo.toml  README.md
rexlang-parser/src/: error.rs  lib.rs
rexlang-parser/src/parser/: mod.rs
rexlang-parser/tests/: parser.rs
rexlang-proc-macro/: Cargo.toml  README.md
rexlang-proc-macro/src/: lib.rs
rexlang-typesystem/: Cargo.toml  README.md
rexlang-typesystem/src/: error.rs  inference.rs  lib.rs  prelude.rs  types.rs  typesystem.rs  unification.rs
rexlang-wasm/: Cargo.toml  README.md
rexlang-wasm/src/: lib.rs
rexlang/src/: lib.rs
(+150 files in other folders)
