[workspace]
resolver = "2"
members = [
    "rexlang",
    "rexlang-ast",
    "rexlang-cli",
    "rexlang-core",
    "rexlang-engine",
    "rexlang-fuzz",
    "rexlang-lexer",
    "rexlang-lsp",
    "rexlang-mdbook",
    "rexlang-parser",
    "rexlang-proc-macro",
    "rexlang-typesystem",
    "rexlang-util",
    "rexlang-wasm",
]

[workspace.package]
description = "Rex: A strongly-typed, pure, implicitly parallel functional programming language"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/talo/rex"
version = "3.9.2"

[workspace.dependencies]
# External dependencies
anyhow = "1"
async-recursion = "1"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
proc-macro2 = "1"
quote = "1"
rand = "0.9"
regex = "1"
rpds = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full"] }
thiserror = "1"
tokio = "1"
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "js"] }

# Internal dependencies
rexlang-ast = { path = "rexlang-ast" }
rexlang-core = { path = "rexlang-core" }
rexlang-engine = { path = "rexlang-engine" }
rexlang-lexer = { path = "rexlang-lexer" }
rexlang-parser = { path = "rexlang-parser" }
rexlang-proc-macro = { path = "rexlang-proc-macro" }
rexlang-typesystem = { path = "rexlang-typesystem" }
rexlang-util = { path = "rexlang-util" }

[workspace.lints.clippy]
uninlined_format_args = "allow"
