[package]
name = "rex-ast"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-recursion = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
rex-lexer = { path = "../rex-lexer", version = "3.9.11" }
rpds = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["rc", "derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
uuid = { workspace = true, features = ["serde", "v4"] }
