[package]
name = "rex"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true }
rex-ast = { workspace = true }
rex-core = { workspace = true }
rex-lexer = { workspace = true }
rex-parser = { workspace = true }
rex-proc-macro = { workspace = true }
rex-engine = { workspace = true }
rex-ts = { workspace = true }
rex-util = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
