[package]
name = "rex-engine"
version = "4.0.0"
edition = "2024"

[features]
# Enables importing `.rex` modules from GitHub via `curl`.
# This is intentionally off by default for production builds.
github-imports = []

[dependencies]
rex-ast = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rex-ts = { workspace = true }
async-recursion = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
rex-lexer = { workspace = true }
rex-parser = { workspace = true }
serde_json = { workspace = true }
rex-util = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
