[package]
name = "rex-engine"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
# Enables importing `.rex` modules from GitHub via `curl`.
# This is intentionally off by default for production builds.
github-imports = []

[dependencies]
rex-ast = { path = "../rex-ast", version = "3.9.11" }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rex-typesystem = { path = "../rex-typesystem", version = "3.9.11" }
async-recursion = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
rex-lexer = { path = "../rex-lexer", version = "3.9.11" }
rex-parser = { path = "../rex-parser", version = "3.9.11" }
serde_json = { workspace = true }
rex-util = { path = "../rex-util", version = "3.9.11" }

[lints]
workspace = true

[dev-dependencies]
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
