[package]
name = "rex-fuzz"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
rex-ast = { workspace = true }
rex-engine = { workspace = true }
rex-lexer = { workspace = true }
rex-parser = { workspace = true }
rex-ts = { workspace = true }
rex-util = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
