[package]
name = "rex-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
lsp-types = "0.94"
serde_json = "1"
rex-lexer = { workspace = true }
rex-ast = { workspace = true }
rex-parser = { workspace = true }
rex-ts = { workspace = true }
rex-util = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = { workspace = true }

[dev-dependencies]
rex-core = { workspace = true }
rex-engine = { workspace = true }

[lints]
workspace = true
