[package]
name = "rex-ts"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
rex-ast = { workspace = true }
rex-lexer = { workspace = true }
rex-parser = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rpds = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
rex-lexer = { workspace = true }
rex-parser = { workspace = true }
