[package]
name = "rex-ts"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = { workspace = true }
rex-ast = { workspace = true }
rex-lexer = { workspace = true }
rex-parser = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rpds = { workspace = true }
rex-util = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
rex-lexer = { workspace = true }
rex-parser = { workspace = true }
