[package]
name = "rex-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = { workspace = true }
rex-ast = { workspace = true }
rex-engine = { workspace = true }
rex-lexer = { workspace = true }
rex-lsp = { path = "../rex-lsp" }
rex-parser = { workspace = true }
rex-ts = { workspace = true }
rex-util = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[lints]
workspace = true
