[package]
name = "rex-wasm"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = { workspace = true }
rex-ast = { path = "../rex-ast", version = "3.9.12" }
rex-engine = { path = "../rex-engine", version = "3.9.12" }
rex-lexer = { path = "../rex-lexer", version = "3.9.12" }
rex-lsp = { path = "../rex-lsp", version = "3.9.12" }
rex-parser = { path = "../rex-parser", version = "3.9.12" }
rex-typesystem = { path = "../rex-typesystem", version = "3.9.12" }
rex-util = { path = "../rex-util", version = "3.9.12" }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[lints]
workspace = true
