[package]
name = "rex"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
rex-ast = { workspace = true }
rex-lexer = { workspace = true }
rex-parser = { workspace = true }
rex-proc-macro = { workspace = true }
rex-engine = { workspace = true }
rex-ts = { workspace = true }
rex-util = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
