[package]
name = "rex"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rex-core = { path = "../rex-core", version = "3.9.11" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
