[package]
name = "rexlang-core"
version.workspace = true
edition.workspace = true

[dependencies]
rexlang-ast = { workspace = true }
rexlang-lexer = { workspace = true }
rexlang-parser = { workspace = true }
rexlang-proc-macro = { workspace = true }
rexlang-engine = { workspace = true }
rexlang-ts = { workspace = true }
rexlang-util = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true }

[lints]
workspace = true
