[package]
name = "rexlang-engine"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
# Enables importing `.rex` modules from GitHub via `curl`.
# This is intentionally off by default for production builds.
github-imports = []

[dependencies]
rexlang-ast = { path = "../rexlang-ast", version = "3.9.11" }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rexlang-typesystem = { path = "../rexlang-typesystem", version = "3.9.11" }
async-recursion = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
rexlang-lexer = { path = "../rexlang-lexer", version = "3.9.11" }
rexlang-parser = { path = "../rexlang-parser", version = "3.9.11" }
serde_json = { workspace = true }
rexlang-util = { path = "../rexlang-util", version = "3.9.11" }

[lints]
workspace = true

[dev-dependencies]
serde = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
