[package]
name = "rexlang-fuzz"
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[dependencies]
rexlang-ast = { workspace = true }
rexlang-engine = { workspace = true }
rexlang-lexer = { workspace = true }
rexlang-parser = { workspace = true }
rexlang-typesystem = { workspace = true }
rexlang-util = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
