[package]
name = "rexlang-lsp"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
lsp-types = "0.94"
serde_json = "1"
rexlang-lexer = { path = "../rexlang-lexer", version = "3.9.3" }
rexlang-ast = { path = "../rexlang-ast", version = "3.9.3" }
rexlang-parser = { path = "../rexlang-parser", version = "3.9.3" }
rexlang-typesystem = { path = "../rexlang-typesystem", version = "3.9.3" }
rexlang-util = { path = "../rexlang-util", version = "3.9.3" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = { workspace = true }

[dev-dependencies]
rexlang-core = { path = "../rexlang-core", version = "3.9.3" }
rexlang-engine = { path = "../rexlang-engine", version = "3.9.3" }

[lints]
workspace = true
