[package]
name = "rexlang-parser"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
regex = { workspace = true }
rexlang-ast = { path = "../rexlang-ast", version = "3.9.3" }
rexlang-lexer = { path = "../rexlang-lexer", version = "3.9.3" }
thiserror = { workspace = true }
rexlang-util = { path = "../rexlang-util", version = "3.9.3" }
