[package]
name = "rexlang-typesystem"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
thiserror = { workspace = true }
rexlang-ast = { path = "../rexlang-ast", version = "3.9.11" }
rexlang-lexer = { path = "../rexlang-lexer", version = "3.9.11" }
rexlang-parser = { path = "../rexlang-parser", version = "3.9.11" }
chrono = { workspace = true }
uuid = { workspace = true }
rpds = { workspace = true }
rexlang-util = { path = "../rexlang-util", version = "3.9.11" }

[lints]
workspace = true

[dev-dependencies]
rexlang-lexer = { path = "../rexlang-lexer", version = "3.9.11" }
rexlang-parser = { path = "../rexlang-parser", version = "3.9.11" }
