[package]
name = "rexlang-wasm"
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = { workspace = true }
rexlang-ast = { workspace = true }
rexlang-engine = { workspace = true }
rexlang-lexer = { workspace = true }
rexlang-lsp = { path = "../rexlang-lsp" }
rexlang-parser = { workspace = true }
rexlang-typesystem = { workspace = true }
rexlang-util = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[lints]
workspace = true
