[package]
name = "rexlang-wasm"
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
futures = { workspace = true }
rexlang-ast = { path = "../rexlang-ast", version = "3.9.1" }
rexlang-engine = { path = "../rexlang-engine", version = "3.9.1" }
rexlang-lexer = { path = "../rexlang-lexer", version = "3.9.1" }
rexlang-lsp = { path = "../rexlang-lsp", version = "3.9.1" }
rexlang-parser = { path = "../rexlang-parser", version = "3.9.1" }
rexlang-typesystem = { path = "../rexlang-typesystem", version = "3.9.1" }
rexlang-util = { path = "../rexlang-util", version = "3.9.1" }
serde_json = { workspace = true }
wasm-bindgen = "0.2"

[lints]
workspace = true
