[package]
name = "rexlang"
description.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rexlang-core = { path = "../rexlang-core", version = "3.9.1" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
