[package]
name = "rexlang"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rexlang-core = { path = "../rexlang-core", version = "3.9.8" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
